Add java 11 support.
Signed-off-by: David Black <dblack@atlassian.com>